# norm-rs

./: Cargo.toml  LICENSE  LICENSE-AGPL  LICENSE-APACHE  README.md
legal/: CLA.md  CONTRIBUTION_POLICY.md
rfe/: CONTRIBUTING.md  README.md  SECURITY.md
rfe/cbr-finapi-rs/: CHANGELOG.md  Cargo.toml  README.md
rfe/cbr-finapi-rs/benches/: requests.rs
rfe/cbr-finapi-rs/src/: antifraud.rs  ebs.rs  lib.rs  tspi.rs
rfe/cbr-finapi-rs/tests/: integration.rs
rfe/lending-state-rs/: CHANGELOG.md  Cargo.toml  README.md
rfe/lending-state-rs/benches/: fsm.rs
rfe/lending-state-rs/src/: lib.rs
rfe/lending-state-rs/tests/: compile_fail_tests.rs
rfe/lending-state-rs/tests/compile_fail/: disburse_draft.rs  disburse_draft.stderr  disburse_rejected.rs  disburse_rejected.stderr
rfe/pdn-rs/: CHANGELOG.md  Cargo.toml  README.md
rfe/pdn-rs/benches/: pdn.rs
rfe/pdn-rs/src/: lib.rs
rfe/pdn-rs/tests/: integration.rs
rfe/rfe-types/: CHANGELOG.md  Cargo.toml  README.md
rfe/rfe-types/benches/: hashing.rs  streebog.rs
rfe/rfe-types/src/: hashing.rs  lib.rs  test_vectors.rs
rfe/rfe-types/tests/: protocol_v1.rs
rfe/smev4-rs/: CHANGELOG.md  Cargo.toml  README.md
rfe/smev4-rs/benches/: xml.rs
rfe/smev4-rs/src/: client.rs  lib.rs  rsocket.rs  services.rs
rfe/smev4-rs/tests/: integration.rs
