[package]
name = "cbr-finapi-rs"
description = "Typed async client for CBR public APIs (TsPI, EBS, GIS AntiFraud)"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
repository = "https://github.com/norm-rs/norm-rs"
homepage = "https://github.com/norm-rs/norm-rs"
documentation = "https://docs.rs/cbr-finapi-rs"

[features]
default = []
std = ["rfe-types/std"]
client = ["std", "reqwest", "tokio", "tracing"]

[dependencies]
rfe-types = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }

# Client-only dependencies
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
mockito = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "requests"
harness = false

[[test]]
name = "integration"
required-features = ["client"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
